unpackaged/objects/Vice_Rector_Note_Module__c.object
<CustomObject>
    <fields>
        <fullName>Assignment_Due_Date__c</fullName>
        <label>Assignment Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <label>Assignment (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor_Email__c</fullName>
        <label>Professor Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor_Name__c</fullName>
        <label>Professor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postponement_Reason__c</fullName>
        <label>Postponement Reason (if applicable)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Postponement_Requested__c</fullName>
        <label>Postponment Requested?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postponement__c</fullName>
        <inlineHelpText>Are you requesting a postponement? If yes, please provide the reason and the proposed date</inlineHelpText>
        <label>Postponement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Date__c</fullName>
        <label>Proposed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Module Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vice_Rector_Note__c</fullName>
        <label>Vice Rector Note</label>
        <referenceTo>Vice_Rector_Note__c</referenceTo>
        <relationshipLabel>Vice Rector Note Modules</relationshipLabel>
        <relationshipName>Vice_Rector_Note_Modules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vice Rector Note Module</label>
    <nameField>
        <label>Module Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vice Rector Note Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>